--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <h1>Curso Git</h1>
 
     <p>Este es un curso de git.</p>
-    
+    <p>Curso  git orientado por Javi</p>    
 </body>
 </html>
